--- a/package.json
+++ b/package.json
@@ -16,11 +16,31 @@
     "eject": "react-scripts eject",
     "lint": "eslint . --fix && prettier --write ."
   },
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "env": {
+    "browser": true,
+    "es2021": true,
+    "jest": true,
+    "node":true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:jest/recommended",
+    "react-app",
+    "react-app/jest"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react",
+    "jest"
+  ]
   },
   "browserslist": {
     "production": [
@@ -36,11 +56,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-testing-library": "^7.1.1",
     "globals": "^15.14.0",
+    "jest": "^27.5.1",
     "prettier": "^3.4.2"
   }
 }
