--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,30 @@
 {
+  "parser": "@babel/eslint-parser",
   "env": {
+    "node": true,
     "browser": true,
-    "es2021": true,
-    "jest": true,
-    "node": true
+    "es2021": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:jest/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
   "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "jest"],
+  "plugins": ["react", "prettier"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "rules": {
-    "jest/no-disabled-tests": "warn", // Warn about skipped tests
-    "jest/no-focused-tests": "error", // Error on `.only` in tests
-    "jest/no-identical-title": "error", // Error if test titles are duplicated
-    "jest/expect-expect": "off",
-    "react/prop-types": "off"    // Example: Disable prop-types rule for React
+    "react/react-in-jsx-scope": "off",
+    "no-unused-vars": "warn",
+    "semi": ["error", "always"],
+    "prettier/prettier": "error",
+    "react/prop-types": "off",
+    "no-undef": "error"
   }
 }
